--- a/src/html/reservation/SCR_GA_RV_0201_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0201_M01.html
@@ -18,6 +18,7 @@
 				
 				<div class="reservation">
 
+					<!-- 20220818 -->
 					<div class="reservation-module">
 						<section class="section">
 							
@@ -62,8 +63,9 @@
 							<div class="grid-flex">
 								<div class="flex"><a href="#">오늘 10:10 ~ 12:10</a></div>
 								<div class="flex">
-									<button type="button">
+									<button type="button" class="btn-link">
 										2시간
+										<i class="ico arrow-right-nav060 lg"></i>
 									</button>
 								</div>
 							</div>
@@ -71,38 +73,57 @@
 	
 						<section class="section">
 							<div class="title-area grid-flex">
-								<h3 class="title-xs flex">대여유형 <span class="tag">왕복</span></h3>
-								<div class="flex"><button class="btn-link" type="button">
-									<span class="under">편도로 변경</span><i class="ico arrow-right-nav050 xs"></i></button></div>
+								<h3 class="title-xs flex">대여유형 <span class="tag">편도</span><span class="tag green">왕복</span></h3>
+								<div class="flex">
+									<button class="btn-link" type="button">
+										<span class="under">편도로 변경</span><i class="ico arrow-right-nav060 lg"></i>
+									</button>
+								</div>
 							</div>
 							<div class="grid-flex">
 								<div class="flex col-3">대여/반납 위치</div>
 								<div class="return flex col-7">
-									<button type="button">
-										<i class="ico badge-g md"></i>
+									<button type="button" class="btn-link">
+										<i class="ico badge-g lg"></i>
 										한남역 1번 출구
+										<i class="ico arrow-right-nav060 lg"></i>
+									</button>
+								</div>
+							</div>
+							<div class="grid-flex">
+								<div class="flex col-3">반납위치</div>
+								<div class="return flex col-7">
+									<button type="button" class="btn-link">
+										<i class="ico badge-f lg"></i>
+										독서당로 111
+										<i class="ico arrow-right-nav060 lg"></i>
 									</button>
 								</div>
 							</div>
 						</section>
 	
 						<section class="section">
-							<div class="title-area">
-								<h3 class="title-xs">결제정보</h3>
+							<div class="title-area grid-flex">
+								<div class="flex">
+									<h3 class="title-xs">결제정보 <span class="tag sale">45% 할인</span></h3>
+								</div>
+								<div class="flex">
+									<span class="price deco-througt">1,730,000</span>원
+								</div>
 							</div>
 							<div class="grid-flex">
 								<div class="flex col-2">대여요금</div>
 								<div class="flex col-8">
-									<span class="tag sale">58%할인</span>
-									<span class="price deco-througt">1,730,000원</span>
-									<span class="price">1,800,000원</span>
+									<span class="price">1,800,000</span>원
 								</div>
 							</div>
 							<div class="grid-flex">
 								<div class="flex col-2">할인/적립</div>
 								<div class="flex col-8">
-									<button type="button">
-										<span class="price">-7,195원</span>
+									<button type="button" class="btn-link">
+										쿠폰할인
+										<span class="price">-99,999</span>원
+										<i class="ico arrow-right-nav060 lg"></i>
 									</button>
 								</div>
 							</div>
@@ -111,13 +132,10 @@
 								<div class="title-area">
 									<h3 class="title-xs">포인트</h3>
 								</div>
-								<div class="grid-flex">
-									<div class="flex">그린포인트 <span class="point">(보유 포인트 55P)</span></div>
-								</div>
-								<div class="grid-flex ip-group box">
+								<div class="grid-flex ip-group">
 									<div class="flex col-7">
 										<div class="row">
-											<input type="number" class="ip-txt" title="포인트">
+											<input type="text" class="ip-txt" title="포인트" value="10 원">
 											<div class="line"></div>
 										</div>
 									</div>
@@ -125,11 +143,22 @@
 										<button type="button" class="btn md full">전액사용</button>
 									</div>
 								</div>
+
+								<div class="grid-flex green-point">
+									<div class="flex col-3">그린포인트</div>
+									<div class="flex col-7">
+										보유 포인트
+										<span class="price">1,000,000</span> Point
+									</div>
+								</div>
 		
-								<div class="grid-flex">
+								<div class="grid-flex l-point">
 									<div class="flex">L.POINT</div>
 									<div class="flex">
-										<button type="button">0원</button>
+										<button type="button" class="btn-link">
+											<span class="price">0</span>원
+											<i class="ico arrow-right-nav060 lg"></i>
+										</button>
 									</div>
 								</div>
 							</div>
@@ -139,7 +168,9 @@
 							<div class="title-area grid-flex">
 								<h3 class="title-xs flex">보험료</h3>
 								<div class="flex">
-									<button class="btn-link" type="button">자세히<i class="ico arrow-right-nav050 xs"></i></button>
+									<button class="btn-link" type="button">
+										<span class="under">자세히</span>
+									</button>
 								</div>
 							</div>
 							<div class="radio-module">
@@ -159,30 +190,34 @@
 									<em class="insur">+2,700원</em>
 								</label>
 							</div>
-							<div class="grid-flex">
+							<div class="total grid-flex">
 								<div class="flex">최종결재금액</div>
 								<div class="flex">
-									<span class="price deco-througt">39,750원</span>
-									<span class="price">12,545원</span>
+									<span class="price deco-througt">9,999,999원</span>
+									<span class="price">9,999,999원</span>
 								</div>
 							</div>
 						</section>
 	
-						<section class="section">
-							<div class="grid-flex">
-								<div class="flex">결제수단</div>
+						<section class="section corporation">
+							<div class="title-area grid-flex">
+								<h3 class="title-xs flex">결제수단</h3>
 								<div class="flex">
-									<button class="btn-link" type="button">국민카드 6306<i class="ico arrow-right-nav050 xs"></i></button>
+									<button class="btn-link" type="button">국민카드 6306<i class="ico arrow-right-nav060 lg"></i></button>
+									<span class="txt">법인[전용]</span>
 								</div>
 							</div>
+							<p class="desc-cp">
+								법인 관리자가 등록한 카드입니다.<br>
+								카드 수정 및 삭제가 불가능합니다.
+							</p>
 						</section>
 	
 						<section class="section">
 							<div class="title-area">
-								<h3 class="title-md">대여예약 약관동의 (필수)</h3>
+								<h3 class="agree-title">대여예약 약관동의 (필수)</h3>
 							</div>
 
-							<!-- 20220801 수정 -->
 							<div class="agree-group">
 								<div class="item check-all">
 									<label for="tmpCheckbook4" class="gc-checkbox round">
@@ -233,26 +268,27 @@
 									</div>
 								</div>
 							</div>
-							<!-- //20220801 수정 -->
-	
+						</section>
+
+						<section class="section">
+							<div class="title-area grid-flex">
+								<h3 class="title-xs flex">예약 전 주의사항</h3>
+							</div>
 							<div class="info-module">
-								<div class="title-area">
-									<h3 class="title-md">예약 전 주의사항</h3>
-								</div>
-								<ul class="txt-list dot">
-									<li>취소 시점에 따라 수수료가 부과될 수 있습니다.</li>
-									<li>주유 시 차량 내 비치된 주유카드를 사용해주세요.</li>
-									<li>자세한 사항은 전체 주의사항을 확인해주세요.</li>
-								</ul>
+								<p class="desc-xs">
+									취소 시점에 따라 수수료가 부과될 수 있습니다.<br>
+									주유 시 차량 내 비치된 주유카드를 사용해주세요.<br>
+									자세한 사항은 전체 주의사항을 확인해주세요.
+								</p>
 		
-								<p class="info-title">계약안내</p>
-								<ul class="txt-list dot">
-									<li>본 차량은 롯데렌탈㈜의 위수탁차량입니다.</li>
-									<li>차량을 예약하시면 고객님과 롯데렌탈㈜ 사이에 계약이 이루어지게 됩니다.</li>
-								</ul>
+								<p class="info-title">[계약안내]</p>
+								<p class="desc-xs">
+									본 차량은 롯데렌탈㈜의 위수탁차량입니다. 차량을 예약하시면 고객님과 롯데렌탈㈜ 사이에 계약이 이루어지게 됩니다.
+								</p>
 							</div>
 						</section>
 					</div>
+					<!-- //20220818 -->
 
 				</div>
 
