--- a/src/html/reservation/SCR_GA_RV_0204_M01_P01.html
+++ b/src/html/reservation/SCR_GA_RV_0204_M01_P01.html
@@ -1,8 +1,11 @@
-<div class="layer-wrap">
+<div class="layer-wrap reservation">
 	<div class="layer-body">
 		<div class="reservation">
-			<div class="search-result">
+			<!-- 20220818 -->
+			<div class="search-result greenzon">
+				
 				<div class="item">
+					<i class="ico badge-f xl2"></i>
 					<strong class="keyword">시상빌딩</strong>
 					<p class="address">서울 강남구 대치동 905-19 text text text text...</p>
 				</div>
@@ -10,10 +13,11 @@
 			</div>
 		</div>
 	</div>
-	<div class="layer-footer">
+	<!-- 20220818 -->
+	<div class="layer-footer full">
 		<div class="btn-wrap">
 			<div class="btn-group">
-				<button type="button" class="btn primary lg">선택</button>
+				<button type="button" class="btn xl">선택</button>
 			</div>
 		</div>
 	</div>
