--- a/src/html/reservation/SCR_GA_RV_0205_M01_P01.html
+++ b/src/html/reservation/SCR_GA_RV_0205_M01_P01.html
@@ -1,4 +1,4 @@
-<div class="layer-wrap">
+<div class="layer-wrap reservation">
 	<div class="layer-body">
 		<div class="reservation">
 			<div class="search-result greenzon">
@@ -11,10 +11,11 @@
 			</div>
 		</div>
 	</div>
-	<div class="layer-footer">
+	<div class="layer-footer full">
 		<div class="btn-wrap">
 			<div class="btn-group">
-				<button type="button" class="btn primary lg">선택</button>
+				<!-- 20220818 -->
+				<button type="button" class="btn xl">선택</button>
 			</div>
 		</div>
 	</div>
