--- a/src/html/reservation/SCR_GA_RV_0206_T01.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T01.html
@@ -25,15 +25,17 @@
                         </div>
                         <div class="cont coupon">
                             <section class="section">
-                                <h3 class="section-title">쿠폰 번호 입력</h3>
+								<!-- 20220818 -->
                                 <div class="section-cont">
-                                    <div class="ip-group">
-                                        <div class="row">
-                                            <input type="text" placeholder="쿠폰 번호 입력" />
-                                            <button class="btn primary md"><span class="text">등록</span></button>
+									<div class="ip-group unit">
+										<div class="row">
+											<input type="text" class="ip-txt" placeholder="쿠폰 번호 입력" />
+											<div class="line"></div>
                                         </div>
+										<button class="btn md"><span class="text">쿠폰등록</span></button>
                                     </div>
                                 </div>
+								<!-- //20220818 -->
                             </section>
                             <hr class="divider" />
                             <section class="section">
