--- a/src/html/reservation/SCR_GA_RV_0206_T02_1.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T02_1.html
@@ -31,7 +31,7 @@
                                         <p class="title">보유 포인트</p>
                                         <p class="desc">
                                             <span class="value">1,000,000</span>
-                                            <span class="unit">P</span>
+                                            <span class="unit">Point</span>
                                         </p>
                                     </div>
                                 </div>
@@ -40,9 +40,12 @@
                                 <h3 class="section-tit">포인트 사용</h3>
                                 <div class="section-cont">
                                     <input type="text" class="ip-txt" value="-1,000P" />
-                                    <input type="text" class="ip-txt disabled-point" value="할인불가 (주 4회 초과)" />
+                                    <input type="text" class="ip-txt disabled-point" value="할인불가 (주 1회 초과)" disabled/>
                                 </div>
                             </section>
+							<!-- 20220818 -->
+							<hr class="divider">
+							<!-- 20220818 -->
                             <section class="section membership-info">
                                 <h3 class="section-tit">할인</h3>
                                 <div class="section-cont">
