--- a/src/html/reservation/SCR_GA_RV_0206_T03.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T03.html
@@ -21,9 +21,6 @@
                             </ul>
                         </div>
                         <div class="cont membership">
-                            <div class="btn-area">
-                                <a href="#" class="btn-link">비밀번호 등록/수정</a>
-                            </div>
                             <div class="card skt">
                                 <div class="logo">
                                     <div class="logo-img"></div>
@@ -34,6 +31,9 @@
                                     <span class="text">등록하기</span>
                                 </button>
                             </div>
+							<!-- 20220818 -->
+							<hr class="divider">
+							<!-- 20220818 -->
                             <section class="section">
                                 <h3 class="section-tit">할인형</h3>
                                 <div class="section-cont">
