--- a/src/html/reservation/SCR_GA_RV_0206_T02.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T02.html
@@ -31,6 +31,10 @@
                                     <span class="text">등록하기</span>
                                 </button>
                             </div>
+
+							<!-- 20220818 -->
+							<hr class="divider">
+							<!-- 20220818 -->
                             <section class="section membership-info">
                                 <h3 class="section-tit">할인</h3>
                                 <div class="section-cont">
