--- a/src/html/reservation/SCR_GA_RV_0206_T03_2.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T03_2.html
@@ -21,9 +21,6 @@
                             </ul>
                         </div>
                         <div class="cont membership">
-                            <div class="btn-area">
-                                <a href="#" class="btn-link">비밀번호 등록/수정</a>
-                            </div>
                             <div class="card skt">
                                 <div class="logo">
                                     <div class="logo-img"></div>
@@ -46,17 +43,30 @@
                                     </div>
                                 </div>
                             </div>
-                            <section class="section">
-                                <h3 class="section-tit">T+ 포인트 사용</h3>
+							
+							<!-- 20220818 -->
+                            <section class="section pd-bot">
+                                <h3 class="section-tit">
+									T+ 포인트 사용
+									<button type="button" class="btn-link">
+										<span class="under">비밀번호 등록/수정</span>
+										<i class="ico arrow-right-nav060 lg"></i>
+									</button>
+								</h3>
                                 <div class="section-cont">
-                                    <div class="ip-group">
+                                    <div class="ip-group unit">
                                         <div class="row">
-                                            <input type="text" class="point-input" value="-0P"/>
-                                            <button class="btn primary md"><span class="text">전액사용</span></button>
+                                            <input type="text" class="ip-txt point-input" value="-0P"/>
+											<div class="line"></div>
                                         </div>
+										<button class="btn md"><span class="text">전액사용</span></button>
                                     </div>
                                 </div>
+								<!-- //20220818 -->
                             </section>
+							<!-- 20220818 -->
+							<hr class="divider">
+							<!-- 20220818 -->
                             <section class="section">
                                 <h3 class="section-tit">LITE 등급</h3>
                                 <div class="section-cont">
