--- a/src/html/reservation/SCR_GA_RV_0207_M01_1.html
+++ b/src/html/reservation/SCR_GA_RV_0207_M01_1.html
@@ -14,10 +14,6 @@
                 <div class="contents">
                     <div class="reservation">
                         <div class="cont membership">
-                            <div class="btn-area both-sides mt60">
-                                <a href="#" class="btn-link">카드 신청</a>
-                                <a href="#" class="btn-link">비밀번호 등록/수정</a>
-                            </div>
                             <div class="card lpoint">
                                 <div class="logo">
                                     <div class="logo-img"></div>
@@ -27,22 +23,39 @@
                                         <p class="title">보유 포인트</p>
                                         <p class="desc">
                                             <span class="value">1,000,000</span>
-                                            <span class="unit">P</span>
+                                            <span class="unit">Point</span>
                                         </p>
                                     </div>
                                 </div>
                             </div>
+							<!-- 20220818 -->
                             <section class="section">
-                                <h3 class="section-tit">L.POINT 사용</h3>
+                                <h3 class="section-tit">
+									L.POINT 사용
+									<button type="button" class="btn-link">
+										<span class="under">비밀번호 등록/수정</span>
+										<i class="ico arrow-right-nav060 lg"></i>
+									</button>
+								</h3>
                                 <div class="section-cont">
-                                    <div class="ip-group">
+									<div class="ip-group unit">
                                         <div class="row">
-                                            <input type="text" placeholder="비밀번호 6자리" />
-                                            <button class="btn primary md"><span class="text">조회</span></button>
+                                            <input type="text" class="ip-txt" placeholder="비밀번호 6자리" />
+											<div class="line"></div>
                                         </div>
+										<button class="btn md"><span class="text">조회</span></button>
+                                    </div>
+
+									<div class="ip-group unit">
+                                        <div class="row">
+                                            <input type="text" class="ip-txt point-input" value="-0 P" />
+											<div class="line"></div>
+										</div>
+										<button class="btn md"><span class="text">전액사용</span></button>
                                     </div>
                                 </div>
                             </section>
+							<!-- 20220818 -->
                         </div>
                     </div>
                 </div>
