--- a/src/status.html
+++ b/src/status.html
@@ -363,7 +363,7 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0201_M01.html">SCR_GA_RV_0201_M01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-08</td>
-                            <td class="date">20220801</td>
+                            <td class="date">20220818</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -416,10 +416,10 @@
                             <td></td>
                             <td>이민우</td>
                             <td>/reservation</td>
-                            <td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0204_M01_P01#bottom#drag">SCR_GA_RV_0204_M01_P01.html</a></td>
+                            <td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0204_M01_P01#bottom">SCR_GA_RV_0204_M01_P01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-12</td>
-                            <td class="date"></td>
+                            <td class="date">20220818</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -458,10 +458,10 @@
                             <td></td>
                             <td>이민우</td>
                             <td>/reservation</td>
-                            <td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0205_M01_P01#bottom#drag">SCR_GA_RV_0205_M01_P01.html</a></td>
+                            <td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0205_M01_P01#bottom">SCR_GA_RV_0205_M01_P01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-12</td>
-                            <td class="date"></td>
+                            <td class="date"><!-- 20220818 --></td>
                             <td></td>
                         </tr>
                         <tr>
@@ -475,7 +475,7 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T01.html">SCR_GA_RV_0206_T01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date"></td>
+                            <td class="date">20220818</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -531,7 +531,7 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03_1.html">SCR_GA_RV_0206_T03_1.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date"></td>
+                            <td class="date">20220818</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -545,7 +545,7 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03_2.html">SCR_GA_RV_0206_T03_2.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date"></td>
+                            <td class="date">20220818</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -559,7 +559,7 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03_3.html">SCR_GA_RV_0206_T03_3.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date"></td>
+                            <td class="date">20220818</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -573,7 +573,7 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0207_M01.html">SCR_GA_RV_0207_M01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date"></td>
+                            <td class="date">20220818</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -587,7 +587,7 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0207_M01_1.html">SCR_GA_RV_0207_M01_1.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date"></td>
+                            <td class="date">20220818</td>
                             <td></td>
                         </tr>
                         <tr>
