--- a/src/status.html
+++ b/src/status.html
@@ -688,6 +688,20 @@
                             <td class="date"></td>
                             <td></td>
                         </tr>
+						<tr>
+                            <td></td>
+                            <td></td>
+                            <td>Greencar Plus 안내</td>
+                            <td></td>
+                            <td></td>
+                            <td>이민우</td>
+                            <td>/reservation</td>
+                            <td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0214_M01">SCR_GA_RV_0214_M01.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
