혜택 > 쿠폰받기 > 쿠폰몰 > 공공주택 입주민 쿠폰몰 -- 작업 중

--- a/src/status.html
+++ b/src/status.html
@@ -1012,10 +1012,10 @@
                             <td></td>
                             <td>공동주택 입주민 쿠폰몰</td>
                             <td>목록</td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0304_M01.html">SCR_GA_BN_0304_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
