쿠폰 혜택 선택 화면 추가

--- a/src/html/reservation/SCR_GA_RV_0206_T01.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T01.html
@@ -41,11 +41,11 @@
                             <section class="section">
                                 <div class="section-title">
                                     <h3>사용 가능한 쿠폰<span class="badge-num">5</span></h3>
+									<!-- 20220819 -->
                                     <div class="filter">
-                                        <a href="#" class="active">혜택순</a>
-                                        <hr class="divider-v">
-                                        <a href="#">마감순</a>
+										<a href="#" class="ctr">혜택순 <i class="ico arrow-bot-nav060 lg"></i></a>
                                     </div>
+									<!-- //20220819 -->
                                 </div>
                                 <div class="section-cont">
                                     <div class="coupon-list">
