--- a/src/status.html
+++ b/src/status.html
@@ -475,20 +475,20 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T01.html">SCR_GA_RV_0206_T01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date">20220818</td>
+                            <td class="date">20220818<br>20220819</td>
                             <td></td>
                         </tr>
                         <tr>
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td>KT멤버십</td>
+                            <td>쿠폰 혜택 선택</td>
                             <td></td>
-                            <td>박지수</td>
+                            <td>이민우</td>
                             <td>/reservation</td>
-                            <td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T02.html">SCR_GA_RV_0206_T02.html</a></td>
-                            <td class="stat">⚫</td>
-                            <td class="compl">07-18</td>
+							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0206_T01_P01#bottom">SCR_GA_RV_0206_T01_P01.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -671,7 +671,7 @@
                             <td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0212_M01">SCR_GA_RV_0212_M01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date"></td>
+                            <td class="date">20220819</td>
                             <td></td>
                         </tr>
                         <tr>
