--- a/src/html/reservation/SCR_GA_RV_0214_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0214_M01.html
@@ -1,33 +1,35 @@
 <div class="layer-wrap">
 	<div class="layer-body">
-		<p>
-			Greencar Plus
-		</p>
-		<p>
-			Greencar Plus는 쾌적한 여건에서 그린카를 이용하실 수 있도록 최상의 서비스를 제공합니다.
-		</p>
+		<div class="greencar-plus">
+			<p class="dt">
+				Greencar Plus
+			</p>
+			<p class="dd">
+				Greencar Plus는 쾌적한 여건에서 그린카를 이용하실 수 있도록 최상의 서비스를 제공합니다.
+			</p>
+	
+			<p class="dt">
+				예약 전 세차 완료
+			</p>
+			<p class="dd">
+				365일 쾌적한 환경을 위해 실내외 차량 관리를 합니다.
+			</p>
+	
+			<p class="dt">
+				예약 전 주유 및 충전 완료
+			</p>
+	
+			<p class="dd">
+				고객의 편의를 높이기 위해 예약 전 주유 및 충전 관리를 합니다.
+			</p>
+	
+			<ul class="list">
+				<li>
+					해당 차량은 22시 ~ 06시 사이에 예약 및 반납이 불가합니다.
+				</li>
+			</ul>
+		</div>
 
-		<p>
-			예약 전 세차 완료
-		</p>
-		<p>
-			365일 쾌적한 환경을 위해 실내외 차량 관리를 합니다.
-		</p>
-
-		<p>
-			예약 전 주유 및 충전 완료
-		</p>
-
-		<ul class="list">
-			<li>
-				해당 차량은 22시 ~ 06시 사이에 예약 및 반납이 불가합니다.
-			</li>
-		</ul>
-
-		<p>
-
-		</p>
-		
 	</div>
 	<div class="layer-footer">
 		<div class="btn-wrap">
