--- a/src/html/reservation/SCR_GA_RV_0207_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0207_M01.html
@@ -36,7 +36,7 @@
 									<div class="ip-wrap">
 										<div class="ip-group">
 											<div class="row">
-												<label for="card" class="ip-label">비밀번호</label>
+												<label for="card" class="ip-label">카드번호</label>
 												<div class="ip-card-module">
 													<input id="card" type="text" class="ip-txt" data-pos="1" placeholder="1234" value="1234" maxlength='4'>
 													<input type="text" class="ip-txt" data-pos="2" placeholder="0000" maxlength='4'>
