--- a/src/status.html
+++ b/src/status.html
@@ -1031,7 +1031,7 @@
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0305_M01.html">SCR_GA_BN_0305_M01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">20220819</td>
                             <td></td>
                         </tr>
                         <tr>
