내정보 > 그린댓글 > 목록, 수정 -- 작업 중

--- a/src/status.html
+++ b/src/status.html
@@ -1319,10 +1319,10 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
-                            <td class="stat"></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0801_M01.html">SCR_GA_CI_0801_M01.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1333,10 +1333,10 @@
                             <td>수정</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
-                            <td class="stat"></td>
+                            <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0801_P01#full">SCR_GA_CI_0801_P01.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
