그린카 퍼블리싱 산출물 리스트 업데이트

--- a/src/status.html
+++ b/src/status.html
@@ -1359,11 +1359,39 @@
                             <td></td>
                             <td></td>
                             <td>추천인 초대</td>
+                            <td>기본</td>
                             <td></td>
-                            <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0901_M01.html">SCR_GA_CI_0901_M01.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>미인증 포함</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/mypage</td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0901_M01_01.html">SCR_GA_CI_0901_M01_01.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>데이터 없음</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/mypage</td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0901_M01_02.html">SCR_GA_CI_0901_M01_02.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
