--- a/src/status.html
+++ b/src/status.html
@@ -1344,12 +1344,12 @@
                         <tr>
                             <td></td>
                             <td></td>
-                            <td>sns 초대</td>
+                            <td>친구 초대</td>
                             <td></td>
                             <td></td>
                             <td></td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0901_M01.html">SCR_GA_CI_0901 _M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1363,8 +1363,8 @@
                             <td></td>
                             <td>박지수</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0901_M01.html">SCR_GA_CI_0901_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0903_M01.html">SCR_GA_CI_0903_M01.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1377,8 +1377,8 @@
                             <td></td>
                             <td>박지수</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0901_M01_01.html">SCR_GA_CI_0901_M01_01.html</a></td>
-                            <td class="stat"></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0903_M01_01.html">SCR_GA_CI_0903_M01_01.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1391,8 +1391,8 @@
                             <td></td>
                             <td>박지수</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0901_M01_02.html">SCR_GA_CI_0901_M01_02.html</a></td>
-                            <td class="stat"></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0903_M01_02.html">SCR_GA_CI_0903_M01_02.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
