쿠폰 다운로드 후 ,  다운로드 아이콘-> 체크 아이콘으로 변경

--- a/src/html/benefit/SCR_GA_BN_0304_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0304_M01.html
@@ -65,7 +65,7 @@
                                                 <span class="badge green sm">D-35</span>
                                             </div>
                                             <button class="btn icon md">
-                                                <i class="ico download lg"></i>
+                                                <i class="ico check-second xl"></i>
                                             </button>
                                         </div>
                                         <div class="coupon-item">
