--- a/src/html/mypage/SCR_GA_CI_0401_M01.html
+++ b/src/html/mypage/SCR_GA_CI_0401_M01.html
@@ -155,7 +155,7 @@
 											<span class="badge green sm">D-35</span>
 										</div>
 										<button class="btn icon md">
-											<i class="ico download lg"></i>
+											<i class="ico second-check xl"></i>
 										</button>
 									</div>
 									<div class="coupon-item">
